# task-sheet-splitter

./: .gitignore  README.md  pyproject.toml
task_sheet_splitter/: main.py
