[tool.poetry]
name = "task-sheet-splitter"
version = "0.1.0"
description = "Split exercise sheets into multiple pages with extra space to write solutions"
authors = ["Benno Fünfstück <benno.fuenfstueck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.18.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
split-sheet = "task_sheet_splitter.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
